--- a/trackers/requirements.txt
+++ b/trackers/requirements.txt
@@ -51,7 +51,7 @@ pypdf==3.17.1
 PySocks==1.7.1
 python-dotenv==1.0.0
 python-iso639==2023.6.15
-python-magic-bin==0.4.14
+python-magic==0.4.27
 PyYAML==6.0.1
 rapidfuzz==3.5.2
 regex==2023.10.3
